--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -1,11 +1,27 @@
-services:  
-  redis:  
-    image: redis:7  
-    container_name: springshield_redis  
-    ports:  
-      - "6379:6379"  
-    volumes:  
-      - redis_data:/data  
-  
-volumes:  
+version: "3.8"
+services:
+  gateway:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - BACKEND_URLS=http://host.docker.internal:8081,http://host.docker.internal:8082
+      - FRONTEND_URL=http://localhost:3000
+      - HEALTHCHECK_INTERVAL=5000
+      - HEALTHCHECK_FAILURE_THRESHOLD=3
+      - HEALTHCHECK_SUCCESS_THRESHOLD=2
+    depends_on:
+      - redis
+
+  redis:
+    image: redis:7
+    container_name: springshield_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
   redis_data:
