--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -1,17 +1,29 @@
 version: "3.8"
+
 services:
   gateway:
     build: .
     ports:
       - "8080:8080"
     environment:
+      # Redis
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+
+      # Backends
       - BACKEND_URLS=http://host.docker.internal:8081,http://host.docker.internal:8082
       - FRONTEND_URL=http://localhost:3000
+
+      # Health check
       - HEALTHCHECK_INTERVAL=5000
       - HEALTHCHECK_FAILURE_THRESHOLD=3
       - HEALTHCHECK_SUCCESS_THRESHOLD=2
+
+      # ✅ Rate Limiter (Leaky / Token Bucket)
+      - RATE_LIMIT_CAPACITY=20
+      - RATE_LIMIT_REFILL=20
+      - RATE_LIMIT_DURATION=1000
+
     depends_on:
       - redis
 
