--- a/gateway/docker-compose.yml
+++ b/gateway/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   gateway:
-    build: .
+    build: my-gateway-image
     ports:
       - "8080:8080"
     environment:
